--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,7 +56,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.stylemixthemes.masterstudyapp"
+        applicationId "com.campuzify.courses"
         minSdkVersion 21
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
